gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
spec:
  gatewayClassName: gateway-class
  listeners:
    - name: janus-http-api
      port: 80
      hostname: "*.example.local"
      protocol: HTTP
