httpRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs: [ {name: envoy-gateway, port: 80, sectionName: janus-http-api } ]
  hostnames: ["*.example.local"]
  rules:
    - matches:
        - path: {type: PathPrefix, value: /rest}
      backendRefs:
        - {group: "", kind: Service, name: janus-service, port: 8088}
    - matches:
        - path: {type: PathPrefix, value: /admin-rest}
      backendRefs:
        - {group: "", kind: Service, name: janus-service, port: 7088}
    - matches:
        - path: {type: PathPrefix, value: /admin-ws}
      backendRefs:
        - {group: "", kind: Service, name: janus-service, port: 7188}                
    - matches:
        - path: {type: PathPrefix, value: /ws}
      backendRefs:
        - {group: "", kind: Service, name: janus-service, port: 8188}
